<resources>
    <!-- Search View -->
    <string name="select_file">Select File</string>
    <string name="search">Search</string>
    <string name="share_result_file">Share result file</string>
    <string name="key_app_name">App Name</string>
    <string name="expired_on">Expired On</string>
    <string name="key_details">Key Details</string>
    <string name="copy_key">Copy Key</string>
    <string name="add_key">Add Key</string>
    <string name="delete_key">Delete</string>
    <string name="api_key_hint">API Key</string>
    <string name="confirm_delete_key_title">Delete Key</string>
    <string name="confirm_delete_key_message">Are you sure you want to delete this API key?</string>
    <string name="label_one_time_work_status">O</string>
    <string name="label_periodic_work_status">P</string>
    <string name="songs_remain_to_be_found">Songs remain to be found: %1$d</string>

    <!-- Dashboard -->
    <string name="search_songs">Search Songs</string>
    <string name="manage_keys">Manage API keys</string>
    <string name="found_songs">Found Songs</string>
    <string name="add_api_key">Add API Key</string>
</resources>