<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardActivity"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/ad_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="12"
            android:text="@string/search_songs"
            app:layout_constraintBottom_toTopOf="@+id/btn_manage_keys"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_manage_keys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="12"
            android:text="@string/manage_keys"
            app:layout_constraintBottom_toTopOf="@+id/btn_found_songs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_search"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_found_songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minEms="12"
            android:text="@string/found_songs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_manage_keys"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <include
        android:id="@+id/loader"
        layout="@layout/loader"
        />
</androidx.constraintlayout.widget.ConstraintLayout>